--- a/CSS/style.css
+++ b/CSS/style.css
@@ -5,6 +5,8 @@
 }
 body {
 	margin: 0;
+	width: 100vw;
+	height: 100vh;
 }
 a {
 	text-decoration: none;
@@ -53,13 +55,14 @@ a {
 /JS 영역
 */
 .background{
-	height: 100vh;
-	width: 100vw;
-	position: absolute;
+	width: inherit;
+	height: inherit;
+	filter: brightness(50%);
+	object-fit: cover;
+	position: fixed;
 	top: 0;
 	left: 0;
 	z-index: -1;
-	filter: brightness(50%);
 }
 .content{
 	height: 70vh;
