--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,7 @@
 :root {
 	--text-color: #f0f4f5;
 	--background-color: #26334300;
-	--icons-color: #d49466;
+	--sub-color: #d49466;
 }
 body {
 	margin: 0;
@@ -12,13 +12,17 @@ a {
 	text-decoration: none;
 	color: var(--text-color);
 }
+li {
+	list-style: none;
+	padding-left: 0px;
+}
 .navbar {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
 	background-color: var(--background-color);
 	padding: 8px 12px;
-	border-bottom: 1px solid var(--icons-color);
+	border-bottom: 1px solid var(--sub-color);
 }
 .navbar_logo {
 	font-size: 2rem;
@@ -33,16 +37,17 @@ a {
 	padding: 8px 12px;
 }
 .navbar_menu li:hover {
-	background-color: var(--icons-color);
+	background-color: var(--sub-color);
 	border-radius: 5px;
 }
 .navbar_icons {
-	color: var(--icons-color);
+	color: var(--text-color);
 	display: flex;
 	list-style: none;
 	padding-left: 0;
+	margin-left: 8%;
 }
-.navbar_icons li {
+.navbar_icons i {
 	padding: 8px 4px;
 }
 .navbar_toogle {
@@ -65,7 +70,7 @@ a {
 	z-index: -1;
 }
 .content{
-	height: 70vh;
+	height: 80vh;
 	color: var(--text-color);
 	display:flex;
 	flex-direction: column;
@@ -79,10 +84,30 @@ a {
 	opacity: 0.5;
 }
 #clock:hover{
-	opacity: 0.8;
+	opacity: 0.9;
 }
-.fa-solid:hover{
-	color: var(--icons-color)
+#todo-list{
+	display: flex;
+	flex-direction: column;
+}
+#todo-list li i{
+	padding-right: 5px;
+}
+#tips{
+	color: var(--text-color);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	opacity: 0.6;
+}
+#tips :nth-child(2){
+	opacity: 0.5;
+}
+#tips:hover{
+	opacity: 1;
+}
+i:hover{
+	color: var(--sub-color)
 }
 
 
@@ -107,6 +132,7 @@ a {
 		display: none;
 		justify-content: center;
 		width: 100%;
+		margin-left: 0;
 	}
 	.navbar_toogle {
 		display: block;
