--- a/CSS/style.css
+++ b/CSS/style.css
@@ -2,6 +2,7 @@
 	--text-color: #f0f4f5;
 	--background-color: #26334300;
 	--sub-color: #d49466;
+	--hover-color: rgba(0, 0, 0, 0.095);
 }
 body {
 	margin: 0;
@@ -89,6 +90,8 @@ li {
 #todo-list{
 	display: flex;
 	flex-direction: column;
+	padding-left: 0;
+	font-size: 1.5em;
 }
 #todo-list li i{
 	padding-right: 5px;
@@ -104,12 +107,28 @@ li {
 	opacity: 0.5;
 }
 #tips:hover{
+	background-color: var(--hover-color);
 	opacity: 1;
 }
 i:hover{
 	color: var(--sub-color)
 }
-
+#todo-form input{
+	width: 25vw;
+	height: 3vh;
+	background-color: rgba(255, 255, 255, 0);
+	outline:none;
+	border: 0;
+	border-bottom: 2px solid white;
+	text-align:center;
+	color: var(--text-color);
+	font-size: 1.8em;
+}
+#todo-form input::placeholder{
+	color: var(--text-color);
+	font-size: 1em;
+	text-align: center;
+}
 
 
 @media screen and (max-width: 800px) {
@@ -143,5 +162,15 @@ i:hover{
 	}
 	#clock{
 		font-size:  3rem;
+	}
+	#todo-list{
+		font-size: 1em;
+	}
+	#todo-form input{
+		font-size: 0.5em;
+		width: 40vw;
+	}
+	#todo-form input::placeholder{
+		font-size: 0.5em;
 	}
 }
