--- a/CSS/style.css
+++ b/CSS/style.css
@@ -119,13 +119,13 @@ i:hover{
 	background-color: rgba(255, 255, 255, 0);
 	outline:none;
 	border: 0;
-	border-bottom: 2px solid white;
+	border-bottom: 2px solid var(--text-color);
 	text-align:center;
 	color: var(--text-color);
 	font-size: 1.8em;
 }
 #todo-form input::placeholder{
-	color: var(--text-color);
+	color: #f0f4f598;
 	font-size: 1em;
 	text-align: center;
 }
