--- a/CSS/style.css
+++ b/CSS/style.css
@@ -94,7 +94,9 @@ li {
 	font-size: 1.5em;
 }
 #todo-list li i{
+	opacity: 0.6;
 	padding-right: 5px;
+	padding-left: 5px;
 }
 #tips{
 	color: var(--text-color);
