--- a/CSS/style.css
+++ b/CSS/style.css
@@ -134,6 +134,9 @@ i:hover{
 .checkLine{
 	text-decoration:line-through;
 }
+.test{
+	background-color: blueviolet;
+}
 
 
 @media screen and (max-width: 800px) {
