--- a/CSS/style.css
+++ b/CSS/style.css
@@ -134,6 +134,10 @@ i:hover{
 .checkLine{
 	text-decoration:line-through;
 }
+#weather{
+	opacity: 0.7;
+	font-size: 1.5em;
+}
 .test{
 	background-color: blueviolet;
 }
